// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingLabel should render correctly based on the props 1`] = `null`;

exports[`FloatingLabel should render correctly based on the props 2`] = `
<label
  class="md-floating-label md-text--secondary md-floating-label--inactive md-floating-label--inactive-sized"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 3`] = `
<label
  class="md-floating-label md-text--secondary md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 4`] = `
<label
  class="md-floating-label md-text--theme-primary md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 5`] = `
<label
  class="md-floating-label md-text--error md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 6`] = `
<label
  class="md-floating-label md-text--error md-floating-label--inactive md-floating-label--inactive-sized"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 7`] = `
<label
  class="md-floating-label md-text--secondary md-floating-label--inactive md-floating-label--custom-size md-floating-label--inactive-custom-size"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 8`] = `
<label
  class="md-floating-label md-text--secondary md-floating-label--custom-size md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 9`] = `
<label
  class="md-floating-label md-text--theme-primary md-floating-label--custom-size md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 10`] = `
<label
  class="md-floating-label md-text--error md-floating-label--custom-size md-floating-label--floating"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 11`] = `
<label
  class="md-floating-label md-text--error md-floating-label--floating md-floating-label--icon-offset"
  for="test-field"
>
  Some label
</label>
`;
